Fri Mar 24 12:05:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * bin/tao_other_tests.lst:
          Add more !DISABLE_ToFix_LynxOS_* marks to failing tests

Thu Mar 23 16:20:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * bin/tao_orb_tests.lst:
          Add more !DISABLE_ToFix_LynxOS_* marks to failing tests

Thu Mar 23 16:00:49 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * ace/Svc_Conf_Lexer.cpp:

          Fixed two bugs.

          1) Line numbers were not calculated correctly as in most cases the
             new line characters were thrown away but not counted.
          2) Strings were not allowed to contain nested quotes.  However,
             the original lexer allowed this.  Thanks to JR Andreassen
             <janrune@io.com> for reporting this.
  
Thu Mar 23 14:37:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/vcl.mpb:
          Also set specific options for the bds template

Thu Mar 23 14:37:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_limits.h:
          Updated documentation why we have a VxWorks specific
          workaround

Thu Mar 23 14:22:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * bin/tao_other_tests.lst:
          Add more !DISABLE_ToFix_LynxOS_* marks to failing tests

        * bin/PerlACE/Run_Test.pm:
          Add lynxos platform default timing configuration

Thu Mar 23 12:14:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/bor.mpd:
          If linkflags are available, generate them into the project
          file

        * bin/MakeProjectCreator/config/vcl.mpb:
          Added -aa to the link flags to indicate that we link a
          windows application. This prevents a dosbox from appearing
          when we start a vcl windows app.

Thu Mar 23 03:41:18 UTC 2006  Ciju John  <john_c@ociweb.com>

        * ace/Time_Value.inl (set):
